# NAVscout

./: .gitignore  Cargo.toml  README.md  data.yaml
.github/workflows/: ci.yml  main.yml  release.yml
configs/: config.toml  field_drone.toml  garden_route.toml  zone_route.toml
crates/scout-cli/: Cargo.toml
crates/scout-cli/src/: main.rs
crates/scout-crypto/: Cargo.toml
crates/scout-crypto/src/: aead.rs  doctor.rs  keys.rs  lib.rs
crates/scout-fc/: Cargo.toml
crates/scout-fc/src/: autodetect.rs  lib.rs  mav.rs  safety.rs  state.rs
crates/scout-nav/: Cargo.toml
crates/scout-nav/src/: doctor.rs  gnss.rs  lib.rs  nav.rs  thermal.rs
crates/scout-proto/: Cargo.toml
crates/scout-proto/src/: telemetry.rs
crates/scout-uplink/: Cargo.toml
crates/scout-uplink/src/: cert_pin.rs  doctor.rs  lib.rs
crates/scout-vision/: Cargo.toml  build.rs
crates/scout-vision/src/: build.rs  camera.rs  lib.rs  nms.rs  power.rs  tflite.rs  tracker.rs
docs/: FC_ARDUPILOT_SERIAL.md  FC_MATEK_H743_WING_V3.md  FLIGHT_SAFETY.md  LTE_GNSS.md  TRAINING_EXPORT_TFLITE.md  TRAINING_YOLO.md
