[package]
name = "scout-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
time.workspace = true

scout-nav = { path = "../scout-nav" }
scout-uplink = { path = "../scout-uplink" }
scout-crypto = { path = "../scout-crypto" }
scout-proto = { path = "../scout-proto" }
scout-vision = { path = "../scout-vision" }
scout-fc = { path = "../scout-fc" }
