[package]
name = "scout-uplink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true
tracing.workspace = true
time.workspace = true
hex.workspace = true
blake3.workspace = true
serde_json = "1"

scout-crypto = { path = "../scout-crypto" }
scout-proto = { path = "../scout-proto" }
